plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'application'
}

group 'com.wengnermiro.openjfx11.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11
mainClassName="${group}.MainFX"

def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

def javaFxPath = System.getenv("PATH_TO_FX")

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile "org.openjfx:javafx-base:11:${platform}"
    compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', javaFxPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', javaFxPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

task wrapper(type: Wrapper){
    gradleVersion = "4.10"
}